[package]
name = "aoc"
version = "0.1.0"
description = "command line tool to run advent of code puzzles and display output and timings"
authors = [ "Jan-Pieter Cornet <jp+aoc2021 -at- cornet.org>" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exrunner = { path = "../exrunner" }
clap = { version = "4.1.14", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["blocking"] }
comfy-table = "6.1.4"
day1_sonar_sweep = { path = "../day1_sonar_sweep" }
day2_dive = { path = "../day2_dive" }
day3_binary_diagnostic = { path = "../day3_binary_diagnostic" }
day4_giant_squid = { path = "../day4_giant_squid" }
day5_hydrothermal_venture = { path = "../day5_hydrothermal_venture" }
day6_lanternfish = { path = "../day6_lanternfish" }
day7_treachery_of_whales = { path = "../day7_treachery_of_whales" }
day8_seven_segment = { path = "../day8_seven_segment" }
day9_smoke_basin = { path = "../day9_smoke_basin" }
